<resources>
    <string name="app_name">Sudoku</string>
    <string name="options">Options</string>
    <string name="stats">Stats</string>
    <string name="new_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="sudoku">Sudoku</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="beginner">Beginner</string>
    <string name="expert">Expert</string>
    <string name="legacy_stats">Legacy Stats</string>
    <string name="difficulty">Difficulty</string>
    <string name="best_time">Best Time</string>
    <string name="avg_time">Avg. Time</string>
    <string name="games">Games</string>
    <string name="reset">Reset</string>
</resources>
