<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="io.github.ech0_jp.sudoku.view.MainMenu"
    android:theme="@style/NoActionBar">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sudoku"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_Resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:onClick="Resume_OnClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:onClick="NewGame_OnClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:onClick="Stats_OnClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options" />
</LinearLayout>